--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -1,4 +1,4 @@
-name: Convert Jenkinsfile to GitHub Actions Workflow
+name: Convert Classic to yaml ADO pipeline
 
 on:
   workflow_dispatch: # Trigger manually
