--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install yaml
+          pip install -r requirements.txt
           
       - name: Run Migration Script
         run: |
